apply plugin: 'com.android.application'

android {
    compileSdkVersion 28
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    defaultConfig {
        applicationId "com.kyhsgeekcode.disassembler"
        minSdkVersion 23
        targetSdkVersion 28
        versionCode 9
        versionName "1.5.0"

        //multiDexEnabled true
        //testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        externalNativeBuild {
            cmake {
                cppFlags ""
            }
        }
    }
    /*packagingOptions {
        pickFirst 'lib/armeabi-v7a/libhello-jni.so'
        pickFirst 'lib/x86/libhello-jni.so'
    }*/
    lintOptions {
        checkReleaseBuilds false
        // Or, if you prefer, you can continue to check for errors in release builds,
        // but continue the build even when errors are found:
        abortOnError false
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    externalNativeBuild {
        cmake {
            path file('CMakeLists.txt')
        }

        //cmake {
        //    path "src/main/cpp/CMakeLists.txt"
        //}
    }
}

dependencies {
    implementation 'com.google.android.gms:play-services-ads:+'
    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'com.github.codekidX:storage-chooser:2.0.4.4'
    implementation 'com.github.skydoves:colorpickerview:2.1.5'
    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
    implementation group: "pl.openrnd.android", name: "multi-level-listview", version: "1.0.1"
    // https://mvnrepository.com/artifact/commons-io/commons-io
    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    //implementation 'dotnet.msil.decompiler:+'
    implementation  fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
}
/*
dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.android.support:appcompat-v7:28.0.0'
    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
}*/
/*
model {
    /*android.signingConfigs {
        create ("myConfig") {
            keyAlias '--your-key-alias--'
            keyPassword '--key-password--'
            storeFile file('--/path/to/keystore.jks--')
            storePassword '--store-password--'
        }
    }*
    android {
        compileSdkVersion 26
        buildToolsVersion '28.0.3'

        defaultConfig {
            applicationId "com.kyhsgeekcode.disassembler"
            minSdkVersion.apiLevel 23
            targetSdkVersion.apiLevel 26
            versionCode 1
            versionName "1.4.5"
            //multiDexEnabled true
            ndk {
                moduleName "app/src/main/cpp/hello-jni.cpp"
                ldLibs.addAll([ "android", "log"])
            }

        }
        buildTypes {
            release {
                minifyEnabled true
                useProguard true
                proguardFiles.add(file('proguard-android.txt'))
                proguardFiles.add(file('proguard-rules.pro'))
               // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            }
            debug {
                minifyEnabled false
                //useProguard false
                proguardFiles.add(file('proguard-android.txt'))
                proguardFiles.add(file('proguard-rules.pro'))

                //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            }

        }
    }
}*/
